fix(plugins/plugin-client-common): wizard nav can be too wide
We can optimize the width/max-width settings here.
Also, perhaps we should flex-end align the footer buttons, to more closely mimic the positioning as done by PatternFly (background: they use absolute positioning of the nav, which forces them to use a fixed width to the nav; apparently, they need to use absolute positioning of the nav, because oddly the footer is not a sibling of the body, but rather a sibling of the nav+body pair. Probably bugs on their side.

--- a/plugins/plugin-client-common/web/scss/components/Wizard/PatternFly.scss
+++ b/plugins/plugin-client-common/web/scss/components/Wizard/PatternFly.scss
@@ -42,9 +42,14 @@
     flex-direction: row;
   }
   @include WizardNav {
+    width: auto;
     position: unset;
-    min-width: var(--pf-c-wizard__nav--Width);
+    max-width: var(--pf-c-wizard__nav--Width);
   }
+}
+
+@include WizardFooter {
+  justify-content: flex-end;
 }
 
 @include WizardNavItem {
